FindBugs warnings cleanup